fixed web lenght issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #00001F;
-	background-color: #3C8927;
+	color: #00000E;
+	background-color: #2353F9;
 }
 
 .html
@@ -13,7 +13,7 @@
 {
 	z-index: 1;
 	width: 414px;
-	min-height: 5327px;
+	min-height: 5628px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
@@ -23,7 +23,7 @@
 	filter: alpha(opacity=100);
 	padding-left: 8px;
 	padding-right: 346px;
-	padding-bottom: 1873px;
+	padding-bottom: 1572px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -32,7 +32,7 @@
 {
 	z-index: 4;
 	width: 1920px;
-	min-height: 8301px;
+	min-height: 8000px;
 	background-color: #000000;
 	position: fixed;
 	top: 0px;
